--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
+<p class="count">0000</p>
 <button class="playBtn">Play</button>
 <button class="pauseBtn">Pause</button>
 
